Fixed image desaturation in dark mode

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -137,6 +137,16 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root:not([data-theme])
+  {
+    img
+    {
+      filter: brightness(80%);
+    }
+  }
+}
+
 .post-body
 {
   a
